--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ paddleocr>=2.7.0
 # Image processing
 opencv-python-headless>=4.8.0
 pillow==10.0.0
-numpy>=1.24.0
+numpy<2.0.0,>=1.24.0
 
 # Utilities
 requests>=2.31.0
