Fix Coolify deployment issues - health check and error handling

--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -1,4 +1,4 @@
-# Lightweight OCR system for cloud deployment
+# Simple, robust Dockerfile for Coolify deployment
 FROM python:3.11-slim
 
 # Set environment variables
@@ -6,15 +6,14 @@ ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install minimal system dependencies
-RUN apt-get update --allow-insecure-repositories || true && \
-    apt-get install -y --no-install-recommends \
+# Install system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
     libgl1-mesa-glx \
     libglib2.0-0 \
     libgomp1 \
     curl \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* || true
+    && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
 WORKDIR /app
@@ -36,11 +35,11 @@ RUN mkdir -p uploads static logs training_data
 # Set permissions
 RUN chmod +x run_server.py
 
-# Expose port (default to 3030, but will be overridden by cloud platform)
+# Expose port
 EXPOSE 3030
 
-# Health check - use curl directly with PORT environment variable
-HEALTHCHECK --interval=30s --timeout=30s --start-period=120s --retries=3 \
+# Simple health check with longer start period for model loading
+HEALTHCHECK --interval=30s --timeout=10s --start-period=180s --retries=5 \
     CMD curl -f http://localhost:${PORT:-3030}/health || exit 1
 
 # Run the application
