--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -46,9 +46,9 @@ RUN chmod +x run_server.py
 # Expose port (default to 3030, will be overridden by cloud platform)
 EXPOSE 3030
 
-# Health check - use flexible script that adapts to any port
-HEALTHCHECK --interval=30s --timeout=30s --start-period=120s --retries=3 \
-    CMD ./healthcheck.sh
+# Health check - use curl directly with PORT environment variable
+HEALTHCHECK --interval=30s --timeout=30s --start-period=180s --retries=3 \
+    CMD curl -f http://localhost:${PORT:-3030}/health || exit 1
 
 # Run the application
 CMD ["python", "run_server.py"]
