Use Linux-compatible Qwen models - fix qwen2_5_vl recognition error

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,11 @@ websockets>=12.0
 torch==2.1.2
 torchvision==0.16.2
 torchaudio==2.1.2
-transformers==4.45.0
+transformers>=4.41.0
 accelerate==0.24.1
+einops
+sentencepiece
+safetensors
 qwen-vl-utils
 paddlepaddle>=2.5.0
 paddleocr>=2.7.0
