CORRECT: Prioritize Qwen2.5-VL-3B and avoid 7B models completely

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ paddleocr>=2.7.0
 opencv-python-headless>=4.8.0
 pillow==10.0.0
 numpy<2.0.0,>=1.24.0
+matplotlib>=3.5.0
 
 # Utilities
 requests>=2.31.0
