--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ requests>=2.31.0
 jinja2>=3.1.0
 pathlib2>=2.3.0
 typing-extensions>=4.8.0
+psutil>=5.9.0
 
 # Development and testing
 pytest>=7.4.0
